# Collateral-risk-monitor

./: README.md  main.py  pyproject.toml
app/: dashboard.py
app/sections/: hedge_monitor.py  risk_overview.py  stress_scenarios.py
config/: settings.py
data/: loader.py
data/downloads/: collateral_portfolio.csv  ois_curve.csv  swap_hedges.csv
data/sources/: bond_portfolio.py  ecb_curves.py  swap_hedges.py
engine/: curves.py  hedge.py  risk.py  stress.py
